--- a/vertx5-context/pom.xml
+++ b/vertx5-context/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -8,15 +9,16 @@
         <version>2.16.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>smallrye-common-vertx-context</artifactId>
-    <name>SmallRye Common: Vert.x Context Utilities</name>
-    <description>A set of utility classes to ease the usage of Vert.x context locals and duplicated contexts.</description>
+    <artifactId>smallrye-common-vertx5-context</artifactId>
+    <name>SmallRye Common: Vert.x 5 Context Utilities</name>
+    <description>A set of utility classes to ease the usage of Vert.x 5 context locals and duplicated contexts.
+    </description>
 
     <dependencies>
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
-            <version>${version.vertx}</version>
+            <version>${version.vertx5}</version>
         </dependency>
         <dependency>
             <groupId>io.smallrye.common</groupId>
@@ -30,7 +32,7 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-junit5</artifactId>
-            <version>${version.vertx}</version>
+            <version>${version.vertx5}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -42,6 +44,11 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>io.github.dmlloyd.maven</groupId>
+                <artifactId>module-services-plugin</artifactId>
+                <version>${module-services-plugin.version}</version>
+            </plugin>
             <plugin>
                 <groupId>io.smallrye</groupId>
                 <artifactId>jandex-maven-plugin</artifactId>
